...
                ),
              ],
            ),
            const Spacer(),

            CustomButton(
              text: isCajaAbierta ? "Cerrar caja" : "Abrir caja",
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
                    builder: (context) => const CashRegisterScreen(),
                  ),
...
